...
            "state": "translated",
            "value": "關於這個專案的更多內容，在網頁上。"
          }
        }
      }
    },
    "About": {
      "extractionState": "manual",
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "حول التطبيق"
...
            "state": "translated",
            "value": "預算"
          }
        }
      }
    },
    "Budget ID": {
      "extractionState": "manual",
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "معرّف الميزانية"
...
            "state": "translated",
            "value": "油錢或車票"
          }
        }
      }
    },
    "Get started": {
      "extractionState": "manual",
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "لنبدأ"
...
            "state": "translated",
            "value": "它和其他幾端搭配使用"
          }
        }
      }
    },
    "Join": {
      "extractionState": "manual",
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "انضمام"
...
            "state": "translated",
            "value": "加入預算"
          }
        }
      }
    },
    "Join budget": {
      "extractionState": "manual",
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "الانضمام إلى الميزانية"
...
            "state": "translated",
            "value": "寫個評論"
          }
        }
      }
    },
    "Left to spend": {
      "extractionState": "manual",
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "المتبقي للإنفاق"
...
            "state": "translated",
            "value": "新增分類"
          }
        }
      }
    },
    "Next": {
      "extractionState": "manual",
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "التالي"
...
            "state": "translated",
            "value": "和家人一起用"
          }
        }
      }
    },
    "Skip": {
      "extractionState": "manual",
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "تخطٍ"
...
